<resources>
    <string name="app_name">POvMT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sem_ti">Não há TI registrada</string>
    <string name="loading">Carregando</string>
    <string name="semana_atual">Semana Atual</string>
    <string name="historico">Histórico</string>
    <string name="sobre">Sobre</string>
    <string name="config">Configurações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="criar">Registrar TI</string>
    <string name="registrar_ti">Registrar TI</string>
    <string name="dia">Dia</string>
    <string name="horas">Horas</string>
    <string name="atividade">Atividade</string>
    <string name="nome">Nome:</string>
    <string name="categoria">Categoria:</string>
    <string name="prioridade">Prioridade:</string>
    <string name="tag">Tag:</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="nova_atividade">Nova Atividade</string>
    <string name="tempo_investido">Tempo Investido</string>
    <string name="horas_investidas">Horas investidas nessa semana</string>
    <string name="propor_o">Proporção</string>
    <string name="textConfig">textConfig</string>
    <string name="enable_network">Ative a conexão com Internet para usar esse recurso. Clique Wifi para abrir as configurações Wi-Fi ou serviços de rede móvel para permitir a sua rede de dados</string>
    <string name="bt_wifi">Wi-Fi</string>
    <string name="bt_mobile_network">Rede móvel</string>
    <string name="bt_cancel">Cancelar</string>
</resources>
