<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_week"
            android:icon="@drawable/ic_nav_week"
            android:title="@string/semana_atual" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_nav_history"
            android:title="@string/historico" />
        <item
            android:id="@+id/nav_config"
            android:icon="@drawable/ic_nav_settings"
            android:title="Configuração" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/sobre" />

    </group>


    <group android:checkableBehavior="none"
        android:id="@+id/menu_bottom">
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_nav_logout"
            android:title="Logout" />

    </group>


</menu>
