<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:mstb="http://schemas.android.com/apk/res-auto"
    tools:context="les.ufcg.edu.br.povmt.fragments.RegisterTIFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_ti"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"
            android:background="#ddd"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dia"
                android:textAlignment="center"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_vertical|center|center_horizontal" />

            <org.honorato.multistatetogglebutton.MultiStateToggleButton
                android:id="@+id/switch_dia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                mstb:values="@array/dias"
                mstb:mstbPrimaryColor="@color/background"
                mstb:mstbSecondaryColor="@color/colorPrimary"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/horas"
                android:textAlignment="center"
                android:textSize="20sp"
                android:id="@+id/textHour"
                android:layout_gravity="center"
                android:gravity="center_vertical|center|center_horizontal" />

            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/ti_hours"
                android:layout_gravity="center"
                android:inputType="number"
                android:gravity="center_vertical|center|center_horizontal"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#ddd"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/atividade"
                android:textAlignment="center"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />
            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="#ddd"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_margin="5dp" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/atividade_spinner"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:padding="10dp"
                android:spinnerMode="dialog"
                android:prompt="@string/atividade"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:layout_weight="1"
                android:visibility="gone"
                android:id="@+id/layout_new_activity">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center"
                    android:weightSum="0"
                    android:layout_weight="1"
                    android:stretchColumns="*">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nome"
                            android:layout_gravity="center_vertical"
                            android:layout_column="0" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/nome_atv"
                            android:layout_gravity="center_vertical"
                            android:layout_column="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categoria"
                            android:layout_gravity="center_vertical"
                            android:layout_column="0" />

                        <org.honorato.multistatetogglebutton.MultiStateToggleButton
                            android:id="@+id/switch_categoria"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            mstb:values="@array/categorias"
                            mstb:mstbPrimaryColor="@color/background"
                            mstb:mstbSecondaryColor="@color/colorPrimary"
                            android:layout_gravity="center_vertical"
                            android:layout_column="1" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="10dp"
                        android:paddingBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/prioridade"
                            android:layout_gravity="center_vertical"
                            android:layout_column="0" />

                        <Spinner
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/prioridade_spinner"
                            android:layout_gravity="center_vertical"
                            android:layout_column="1"
                            android:layout_weight="0" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tag"
                            android:layout_gravity="center_vertical"
                            android:layout_column="0" />

                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tag"
                            android:layout_gravity="center_vertical"
                            android:layout_column="1" />
                    </TableRow>

                </TableLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:layout_marginBottom="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancelar"
                android:id="@+id/btnCancel"
                android:layout_weight="1"
                android:background="@android:color/holo_red_dark"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/confirmar"
                android:background="@android:color/holo_green_dark"
                android:id="@+id/btnOk"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
