<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center_vertical|center|center_horizontal"
            android:stretchColumns="*"
            android:weightSum="0"
            android:showDividers="middle">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/atividade"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo_investido"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/propor_o"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/tv_nome_atividade"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_tempo_atividade"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />

                <TextView android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:layout_alignParentRight="true"
                    android:id="@+id/tv_proporcao_atividade"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical|center|center_horizontal" />
            </TableRow>

        </TableLayout>
    </android.support.v7.widget.CardView>



</LinearLayout>